<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nama     : "
            android:textColor="#000"
            android:textSize="20sp"

            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etname"
            android:hint="@string/h_name"
            android:textColor="#000"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="NIM        : "
            android:textColor="#000"
            android:textSize="20sp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etnim"
            android:hint="@string/h_nim"
            android:textColor="#000"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hobi        : "
            android:textColor="#000"
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etemail"
            android:hint="@string/h_hobi"
            android:inputType="textEmailAddress"
            android:textColor="#000"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No. HP    :"
            android:textColor="#000"
            android:textSize="20sp"

            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etphone"
            android:hint="@string/h_phone"
            android:textColor="#000"
            android:inputType="phone"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnupdate"
        android:background="@color/colorAccent"
        android:layout_gravity="center_horizontal"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:text="@string/update"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btndelete"
        android:layout_gravity="center_horizontal"
        android:background="@color/color3"
        android:textColor="@color/colorWhite"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textSize="20sp" />

</LinearLayout>
